# InjectorDetector

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  DESIGN.md  LICENSE  README.md  STATUS.md  action.yml
rules/: builtin.yar
src/: aggregate.rs  chunk.rs  config.rs  lib.rs  main.rs  progress.rs  quarantine.rs  repo.rs  safe_view.rs  types.rs  walk.rs
src/detect/: bigram_corpus.txt  bigram_model.rs  canary.rs  embedding.rs  encoded.rs  heuristic.rs  hidden_chars.rs  llm_classifier.rs  mod.rs  model_cache.rs  perplexity.rs
src/extract/: config.rs  markup.rs  mod.rs  notebook.rs  pdf.rs  source.rs  text.rs
src/report/: human.rs  json.rs  mod.rs  sarif.rs
tests/: integration.rs  properties.rs  snapshots.rs
tests/common/: git_helper.rs  mod.rs
tests/fixtures/clean/: README.md  config.json
tests/fixtures/clean/src/: lib.rs
tests/fixtures/dirty/: canary.txt  encoded.md  heuristic.md  hidden.txt  high_entropy.txt  markup.html  notebook.ipynb  source.py  workflow.yaml
tests/snapshots/: snapshots__human_report.snap  snapshots__json_report.snap  snapshots__sarif_report.snap
