[package]
name = "injector-detector"
version = "0.1.0"
edition = "2024"
description = "Static prompt-injection scanner for Git repositories"
license = "MIT"

[[bin]]
name = "injector-detector"
path = "src/main.rs"

[lib]
name = "injector_detector"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git access
gix = { version = "0.66", default-features = false, features = ["max-performance-safe", "blocking-network-client", "worktree-mutation", "revision"] }

# Walking / filtering
ignore = "0.4"
globset = "0.4"

# Parallelism
rayon = "1.10"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"

# Pattern matching
regex = "1"
aho-corasick = "1"
yara-x = "1.14"

# Unicode
unicode-normalization = "0.1"

# Tree-sitter source extraction
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-ruby = "0.23"

# HTML / SVG / XML extraction
scraper = "0.20"

# Encoding
base64 = "0.22"

# Misc
tempfile = "3"
once_cell = "1"
percent-encoding = "2"

[dev-dependencies]
proptest = "1.5"
insta = { version = "1.40", features = ["json"] }

[features]
default = []
embeddings = ["dep:ort", "dep:ndarray"]
pdf = ["dep:pdf-extract"]

[dependencies.pdf-extract]
version = "0.7"
optional = true

[dependencies.ort]
version = "=2.0.0-rc.10"
optional = true

[dependencies.ndarray]
version = "0.16"
optional = true
